Add comments to the __invoke() method of invokable controllers.
